--- a/src/component/style/footerStyle.sass
+++ b/src/component/style/footerStyle.sass
@@ -6,7 +6,8 @@
   grid-template-columns: repeat(5,1fr)
   text-align: left
   grid-gap: 15px
-
+.footer__item .logo
+  width: 150px
 .footer__linklist
   list-style: none
   padding: 0
@@ -28,6 +29,8 @@
   margin-top: 15px
 .footer__form
   display: flex
+  width: 100%
+  max-width: 200px
   position: relative
   z-index: -1
 
