--- a/src/component/style/mainStyle.sass
+++ b/src/component/style/mainStyle.sass
@@ -6,10 +6,15 @@ body
   margin: 0
   font-size: 14px
 
-
-
 *,*:after,*:before
   box-sizing: border-box
 a
   color: black
   text-decoration: none
+
+
+
+// LOGO
+.logo img
+  width: 100%
+  height: auto
