--- a/src/component/style/media.sass
+++ b/src/component/style/media.sass
@@ -35,6 +35,7 @@
       display: flex
       flex-direction: column
       align-items: center
+      z-index: 100
       .nav__personalAccount
         cursor: pointer
         transition: background-color .6s linear
