--- a/src/component/style/media.sass
+++ b/src/component/style/media.sass
@@ -95,6 +95,7 @@
       .nav__link:last-of-type
         border-bottom: 2px solid #BC9CFF
     .hamburgerMenu
+      z-index: 101
       display: block
       position: fixed
       right: 0
