--- a/src/component/style/footerStyle.sass
+++ b/src/component/style/footerStyle.sass
@@ -38,6 +38,7 @@
   border: none
   border: 1px solid rgba(31, 32, 65, 0.25)
   padding: 5px 15px
+  padding-right: 25px !important
 
 .footer__label
   display: flex
@@ -46,7 +47,7 @@
   position: absolute
   height: 100%
   cursor: pointer
-  right: 15px
+  right: -10px
   transform: rotate(180deg)
 
 
