--- a/src/component/style/media.sass
+++ b/src/component/style/media.sass
@@ -132,6 +132,9 @@
     margin-top: 5px
   .footer__input
     padding: 2px 10px
+  .footer__label
+    right: -5px
+
 
 
 @media (max-width: 350px)
