--- a/src/component/style/footerStyle.sass
+++ b/src/component/style/footerStyle.sass
@@ -34,8 +34,9 @@
   position: relative
 
 .footer__input
+  width: 100%
+  min-width: 200px
   border-radius: 4px
-  border: none
   border: 1px solid rgba(31, 32, 65, 0.25)
   padding: 5px 15px
   padding-right: 25px !important
@@ -47,7 +48,7 @@
   position: absolute
   height: 100%
   cursor: pointer
-  right: -10px
+  right: 0
   transform: rotate(180deg)
 
 
