--- a/src/component/style/footerStyle.sass
+++ b/src/component/style/footerStyle.sass
@@ -52,10 +52,16 @@
   transform: rotate(180deg)
 
 
-
-
-
-
+//copyright
+.footer__copyright
+  padding: 20px 0
+  display: flex
+  justify-content: space-between
+  align-items: center
+.social-icon
+  cursor: pointer
+.social-icon:not(:last-of-type)
+  margin-right: 15px
 
 
 
