--- a/src/component/containers/ContainersStyle.sass
+++ b/src/component/containers/ContainersStyle.sass
@@ -7,6 +7,9 @@
 // form wrapper
 .form-wrapper
   padding: 40px 30px 30px
+  color: black
+  width: 100%
+  max-width: 380px
   background: #FFFFFF
   border: 1px solid rgba(0, 0, 0, 0.12)
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2)
