--- a/src/component/containers/ContainersStyle.sass
+++ b/src/component/containers/ContainersStyle.sass
@@ -7,10 +7,16 @@
 // form wrapper
 .form-wrapper
   padding: 40px 30px 30px
-  color: black
+  color: #1F2041
   width: 100%
   max-width: 380px
   background: #FFFFFF
   border: 1px solid rgba(0, 0, 0, 0.12)
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2)
   border-radius: 4px
+.form-wrapper__title
+  font-family: 'Quicksand'
+  font-size: 24px
+  line-height: 30px
+  margin-top: 0
+  font-weight: bold
