--- a/src/component/style/mainStyle.sass
+++ b/src/component/style/mainStyle.sass
@@ -9,6 +9,9 @@ body
 
 *,*:after,*:before
   box-sizing: border-box
+*:focus
+  border: none
+  outline: none
 a
   color: black
   text-decoration: none
