--- a/src/component/style/media.sass
+++ b/src/component/style/media.sass
@@ -3,12 +3,14 @@
   .header__inner
     .nav__menu
       grid-template-columns: repeat(auto-fit,minmax(45px, 1fr)) !important
-
-
+  .home-page
+    height: auto
 
 
 @media (max-width: 900px)
   //header media queries
+
+
   .header__inner
     padding-bottom: 70px
     overflow: hidden
@@ -143,4 +145,5 @@
   .footer__link
     font-size: 8px
     margin-top: 2px
+
 
