default router setting

--- a/src/component/style/homePage.sass
+++ b/src/component/style/homePage.sass
@@ -4,3 +4,6 @@
   background-repeat: no-repeat
   height: calc(100vh - 200px)
   padding: 70px 0
+  transition: opacity .5s linear
+.home-page--hidden
+  opacity: 0
