--- a/src/component/style/mainStyle.sass
+++ b/src/component/style/mainStyle.sass
@@ -13,6 +13,7 @@ body
   border: none
   outline: none
 a
+  cursor: pointer
   color: black
   text-decoration: none
 
@@ -22,3 +23,16 @@ a
 .logo img
   width: 100%
   height: auto
+//404
+.page-404
+  font-family: Quicksand
+  text-transform: uppercase
+  font-weight: bold
+  text-align: center
+.page-404__title
+  font-size: 1.4rem
+  color: red
+  margin-bottom: 40px
+.page-404__subtitle
+  font-size: 1rem
+  color: #BC9CFF
