--- a/src/component/style/btnStyle.sass
+++ b/src/component/style/btnStyle.sass
@@ -1,6 +1,6 @@
 .btn
   padding: 8px 20px
-
+  cursor: pointer
   border: none
   background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%)
   border-radius: 22px
