mini room card v0.0.2

--- a/src/component/style/mainStyle.sass
+++ b/src/component/style/mainStyle.sass
@@ -25,6 +25,7 @@ a
   height: auto
 //404
 .page-404
+  max-width: 100%
   font-family: Quicksand
   text-transform: uppercase
   font-weight: bold
@@ -33,6 +34,8 @@ a
   font-size: 1.4rem
   color: red
   margin-bottom: 40px
+.page-404__title--long
+  font-size: 0.7rem
 .page-404__subtitle
   font-size: 1rem
   color: #BC9CFF
