--- a/src/component/style/roomStyle.sass
+++ b/src/component/style/roomStyle.sass
@@ -1,7 +1,6 @@
 //Mini room style
 .mini-room
-  width: 250px
-  height: 150px
+  width: 270px
   padding: 1px
   background: #FFFFFF
   box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05)
@@ -10,3 +9,28 @@
   border-radius: 4px 4px 0 0
   width: 100%
   height: 100%
+.mini-room__description
+  padding: 5px 20px 15px 17px
+.mini-room__item
+  margin: 0
+  margin-top: 10px
+  display: flex
+  font-size: 19px
+  justify-content: space-between
+.mini-room__item:first-of-type
+  padding-bottom: 10px
+  border-bottom: 1px solid #aeaeae60
+
+.mini-room__left
+  font-family: Quicksand
+  font-weight: bold
+.mini-room__right
+  font-family: Montserrat, sans-serif
+  color: #cccccc
+  font-weight: normal
+.mini-room__lux
+  color: #BC9CFF
+  font-size: 14px
+  text-transform: uppercase
+.mini-room__value
+  font-weight: bold
