--- a/src/component/style/roomStyle.sass
+++ b/src/component/style/roomStyle.sass
@@ -1,14 +1,35 @@
+//room inner
+@function sum($numbers...)
+  $sum: 0
+  @each $number in $numbers
+    $sum: $sum + $number
+  @return $sum
+
+$roomWidth: 270px
+$roomHeight: 170px
+.room-page__inner
+  display: grid
+  grid-template-columns: repeat(auto-fill, minmax($roomWidth, 1fr))
+  justify-content: center
+  align-content: center
+
 //Mini room style
 .mini-room
-  width: 270px
+  margin: 0 auto
+  width: $roomWidth
   padding: 1px
+  margin-bottom: 25px
   background: #FFFFFF
   box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05)
   border-radius: 4px
+  transition: .2s linear
+.mini-room:hover
+  transform: scale(1.1)
+  box-shadow: 0 10px 40px rgba(31, 32, 65, 0.25)
 .mini-room__img
   border-radius: 4px 4px 0 0
-  width: 100%
-  height: 100%
+  width: $roomWidth
+  height: $roomHeight
 .mini-room__description
   padding: 5px 20px 15px 17px
 .mini-room__item
