--- a/src/component/style/mainStyle.sass
+++ b/src/component/style/mainStyle.sass
@@ -39,3 +39,15 @@ a
 .page-404__subtitle
   font-size: 1rem
   color: #BC9CFF
+//banner
+.banner
+  font-family: Quicksand
+  font-weight: bold
+  text-align: center
+.banner__title
+  text-transform: uppercase
+.banner__subtitle
+  color: #BC9CFF
+  
+  
+    
