--- a/src/component/style/singleRoomPage.sass
+++ b/src/component/style/singleRoomPage.sass
@@ -44,4 +44,53 @@
   margin: 0
 .details__description
   margin: 0
+
+.reviews
+  display: flex
+  justify-content: flex-start
+  align-items: center
+.reviews__diagram
+  width: 160px
+  margin-right: 25px
+.reviews__item
+  position: relative
+.reviews__item:before
+  content: ''
+  position: absolute
+  left: -20px
+  width: 15px
+  height: 15px
+  border-radius: 50%
+  background: #BC9CFF
+
+.reviews__item--bad:before
+  background: linear-gradient(180deg, #FFE39C 0%, #FFBA9C 100%)
+.reviews__item--good:before
+  background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%)
+.reviews__item--nice:before
+  background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%)
+.reviews__item--excellent:before
+  background: linear-gradient(180deg, #919191 0%, #3D4975 100%)
+.reviews__text
+  font-family: Quicksand
+  font-size: 16px/1.4em
+.reviews__total
+  font-size: 0.6em
+  line-height: 1
+  text-anchor: middle
+  fill: #BC9CFF
+  font-weight: bold
+  -moz-transform: translateY(0.2em)
+  -ms-transform: translateY(0.2em)
+  -webkit-transform: translateY(0.2em)
+  transform: translateY(0.2em)
+.reviews__label
+  font-size: 0.25em
+  text-transform: uppercase
+  text-anchor: middle
+  fill: #BC9CFF
+  -moz-transform: translateY(1.7em)
+  -ms-transform: translateY(1.7em)
+  -webkit-transform: translateY(1.7em)
+  transform: translateY(1.7em)
 // inner />
