--- a/src/component/style/singleRoomPage.sass
+++ b/src/component/style/singleRoomPage.sass
@@ -93,4 +93,8 @@
   -ms-transform: translateY(1.7em)
   -webkit-transform: translateY(1.7em)
   transform: translateY(1.7em)
+.single-room__reviews--wrapper
+  display: flex
+  justify-content: space-between
+  align-items: center
 // inner />
