--- a/src/component/style/headerStyle.sass
+++ b/src/component/style/headerStyle.sass
@@ -18,6 +18,7 @@
       align-items: center
 
     .nav__link
+      text-align: center
       padding: 5px
       color: rgba(31, 32, 65, 0.5)
       font-weight: normal
