redux and filter

--- a/src/component/style/datapickerStyle.sass
+++ b/src/component/style/datapickerStyle.sass
@@ -1,4 +1,9 @@
 .datepicker-multi
+  .react-datepicker-popper
+    z-index: 9999 !important
+
+  .react-datepicker-popper:last-of-type
+    left: -25px !important
   .react-datepicker__week *
     margin: 1px 0 !important
   .react-datepicker__day--in-selecting-range
