--- a/src/component/style/media.sass
+++ b/src/component/style/media.sass
@@ -5,6 +5,8 @@
       grid-template-columns: repeat(auto-fit,minmax(45px, 1fr)) !important
     .nav__personalAccount
       margin-left: 60px
+    .btn:not(:last-of-type)
+      margin-right: 10px !important
   .home-page
     height: auto
 
@@ -12,8 +14,6 @@
 
 @media (max-width: 900px)
   //header media queries
-
-
   .header__inner
     padding-bottom: 70px
     overflow: hidden
@@ -136,7 +136,17 @@
   .footer__input
     padding: 2px 10px
 
-
+  .room-page__inner
+    display: flex
+    flex-direction: column
+  .filter
+    display: flex
+    align-content: center
+    flex-wrap: wrap
+    justify-content: space-around
+  .filter__item
+    padding: 5px 10px
+    min-width: 265px
 @media (max-width: 350px)
   .footer__item .logo
     width: 80px
