--- a/src/component/style/headerStyle.sass
+++ b/src/component/style/headerStyle.sass
@@ -1,3 +1,7 @@
+.header
+  box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05)
+  margin-bottom: 30px
+
 .header__inner
   padding: 10px 0
   display: grid
@@ -29,8 +33,9 @@
       color: black
       //text-shadow: 0px 0px 1.3px rgba(31, 32, 65, 1)
   .nav__personalAccount
-    margin-left: 40px
     display: flex
+    justify-content: space-evenly
+
     .account
       max-width: 200px
       padding: 10px 40px
@@ -47,7 +52,7 @@
       text-shadow: 0 0 .65px black
       color: black
     .btn:not(:last-of-type)
-      margin-right: 15px
+      margin-right: 35px
   .hamburgerMenu
     z-index: 10
     padding: 10px
