--- a/src/component/style/searchRoomStyle.sass
+++ b/src/component/style/searchRoomStyle.sass
@@ -4,6 +4,7 @@
   grid-gap: 20px
 .datepicker__label
   padding-left: 4px
+  padding-right: 5px
   text-transform: uppercase
   font-family: 'Quicksand'
   font-weight: bold
