filter and additional page

--- a/src/component/style/homePage.sass
+++ b/src/component/style/homePage.sass
@@ -3,6 +3,7 @@
   background-size: cover
   background-repeat: no-repeat
   height: calc(100vh - 200px)
+  min-height: 600px
   padding: 70px 0
   transition: opacity .5s linear
 .home-page--hidden
