--- a/src/component/style/mainStyle.sass
+++ b/src/component/style/mainStyle.sass
@@ -7,6 +7,8 @@ body
   margin: 0
   font-size: 14px
   background: #ffffff
+*
+  font-family: Quicksand
 
 *,*:after,*:before
   box-sizing: border-box
@@ -18,7 +20,11 @@ a
   color: black
   text-decoration: none
 
-
+.About,
+.Careers,
+.News,
+.Documentation
+  height: 60vh
 
 // LOGO
 .logo img
