--- a/src/component/style/media.sass
+++ b/src/component/style/media.sass
@@ -9,6 +9,7 @@
       margin-right: 10px !important
   .home-page
     height: auto
+    min-height: auto
 
 
 
@@ -28,9 +29,10 @@
         width: 150px
 
     .nav
+      box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05)
       transition: right .3s linear
       padding: 0
-      background: #eeeeee
+      background: #fff
       height: 100%
       position: fixed
       right: -200px
@@ -42,7 +44,6 @@
       align-items: center
       z-index: 100
       .nav__personalAccount
-        cursor: pointer
         transition: background-color .6s linear
         .account
           margin: 0
@@ -71,15 +72,12 @@
           padding: 10px 0
           width: 100%
           text-align: center
-          border: 2px solid #BC9CFF
-          border-bottom: none
           transition: background .6s linear
           &:hover
             background: #BC9CFF
             color: white
       .nav__personalAccount
         width: 100%
-        border: 2px solid #BC9CFF
         padding: 10px 0
         margin: 0
         display: flex
