--- a/src/component/style/roomStyle.sass
+++ b/src/component/style/roomStyle.sass
@@ -9,6 +9,7 @@ $roomHeight: 170px
 .room-page__inner
   display: grid
   grid-template-columns: 1fr 3fr
+  margin-top: 30px
 
 .room-page__rooms
   display: grid
