--- a/src/component/style/footerStyle.sass
+++ b/src/component/style/footerStyle.sass
@@ -4,7 +4,7 @@
 .footer__inner
   margin-top: 100px
   display: grid
-  grid-template-columns: repeat(5,1fr)
+  grid-template-columns: 2fr repeat(5,1fr)
   text-align: left
   grid-gap: 15px
 .footer__item .logo
@@ -54,11 +54,16 @@
 
 
 //copyright
+
 .footer__copyright
   padding: 20px 0
   display: flex
   justify-content: space-between
-  align-items: center
+  align-content: center
+.footer__description
+  margin: 0
+.social
+  max-height: 25px
 .social-icon
   cursor: pointer
 .social-icon:not(:last-of-type)
