--- a/src/component/style/headerStyle.sass
+++ b/src/component/style/headerStyle.sass
@@ -49,7 +49,7 @@
       font-weight: bold
       text-shadow: 0 0 .65px black
       color: black
-    .btn:not(:last-of-type)
+    .btnBlock a:not(:last-of-type)
       margin-right: 35px
   .hamburgerMenu
     z-index: 10
