fix incorrect view of payment on SingleRoomPage

--- a/src/component/style/footerStyle.sass
+++ b/src/component/style/footerStyle.sass
@@ -28,6 +28,14 @@
   color: rgba(31, 32, 65, 0.5)
   line-height: 17px
   margin-top: 15px
+  a
+    font-size: 17px
+    color: rgba(31, 32, 65, 0.5)
+    line-height: 17px
+    margin-top: 15px
+    transition: .3s linear
+    &:hover
+      color: #BC9CFF
 .footer__form
   display: flex
   width: 100%
