--- a/src/component/style/formUIStyle.sass
+++ b/src/component/style/formUIStyle.sass
@@ -15,7 +15,7 @@
 .radio
   display: flex
   flex-wrap: wrap
-  padding: 10px 0
+  padding: 5px
 .input--radio
   padding: 0 10px
 .input[type="radio"]
