--- a/src/component/style/headerStyle.sass
+++ b/src/component/style/headerStyle.sass
@@ -20,14 +20,14 @@
       align-items: center
 
     .nav__link
+      -moz-osx-font-smoothing: grayscale
       text-align: center
       padding: 5px
       color: rgba(31, 32, 65, 0.5)
       font-weight: normal
-      transition: color .6s linear, text-shadow .6s linear
+      transition: .3s linear
     .nav__link:hover
-      font-weight: bold
-      text-shadow: 0 0 .65px black
+      text-shadow: 0 0 .65px black,0 0 .65px black
       color: black
       //text-shadow: 0px 0px 1.3px rgba(31, 32, 65, 1)
   .nav__personalAccount
