--- a/src/component/style/formUIStyle.sass
+++ b/src/component/style/formUIStyle.sass
@@ -89,3 +89,5 @@
 .input[type="checkbox"]:checked + .label--checkbox:after
   background: #BC9CFF
   left: -23px
+.input--error
+  outline: 2px solid red
