--- a/src/component/style/mainStyle.sass
+++ b/src/component/style/mainStyle.sass
@@ -55,6 +55,29 @@ a
   text-transform: uppercase
 .banner__subtitle
   color: #BC9CFF
-  
-  
-    
+
+
+.error
+  color: red
+  font-weight: bold
+  margin: 10px 0 5px 10px
+  position: relative
+.error:before
+  position: absolute
+  content: "!"
+  font-size: 30px
+  font-weight: bold
+  left: -10px
+  bottom: -7px
+.success
+  color: #31EB86
+  font-weight: bold
+  margin: 10px 0 5px 30px
+  position: relative
+.success:before
+  position: absolute
+  content: "✓"
+  font-size: 30px
+  font-weight: bold
+  left: -30px
+  bottom: -7px
