--- a/src/component/style/AccountPageStyle.sass
+++ b/src/component/style/AccountPageStyle.sass
@@ -32,6 +32,7 @@
   justify-content: center
   align-items: center
   p
+    height: 100%
     padding: 10px
     margin: 0
 .account-page__order:not(:first-of-type) p:not(:first-of-type)
