--- a/src/component/style/media.sass
+++ b/src/component/style/media.sass
@@ -27,7 +27,6 @@
       transform: translateX(-50%)
       img
         width: 150px
-
     .nav
       box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05)
       transition: right .3s linear
@@ -86,6 +85,8 @@
     .logout
       z-index: 10000
       position: absolute
+      font-size: 10px
+      padding: 6px 16px
       right: 30px
       top: 17px
       opacity: 0
@@ -178,6 +179,7 @@
       font-size: 19px
 
 
+
 @media (max-width: 600px)
   .footer__inner
     grid-template-columns: 2fr repeat(3,1fr)
@@ -201,7 +203,13 @@
     width: 80px
     height: 80px
 
-
+@media (max-width: 450px)
+  .account-page__info
+    flex-direction: column
+    align-items: flex-start
+  .account-page__order
+    p
+      font-size: 10px
 @media (max-width: 350px)
   .footer__item .logo
     width: 80px
