Add order is realised

--- a/src/component/style/AccountPageStyle.sass
+++ b/src/component/style/AccountPageStyle.sass
@@ -28,7 +28,7 @@
   border: 1px solid #cccccc
 .account-page__order
   display: grid
-  grid-template-columns: 1fr repeat(3,2fr)
+  grid-template-columns: 1fr repeat(3,2fr) 1fr
   justify-content: center
   align-items: center
   p
