--- a/src/component/style/media.sass
+++ b/src/component/style/media.sass
@@ -222,6 +222,9 @@
   .loading
     width: 60px
     height: 60px
+  .account-page__order
+    p
+      font-size: 6px
 @media (max-height: 320px)
   .nav--opened
     overflow: scroll
