add CRM and ManagerChat proto

--- a/src/component/style/AccountPageStyle.sass
+++ b/src/component/style/AccountPageStyle.sass
@@ -27,6 +27,8 @@
   flex-direction: column
   border: 1px solid #cccccc
 .account-page__order
+  text-align: center
+  font-weight: bold
   display: grid
   grid-template-columns: 1fr repeat(3,2fr) 1fr
   justify-content: center
@@ -41,3 +43,10 @@
   border-bottom: 1px solid #cccccc
 .account-page__order p:not(:last-of-type)
   border-right: 1px solid #cccccc
+.admin-button
+  margin-top: 10px
+  min-width: 10%
+  width: 100%
+  max-width: 30%
+  .btn
+    width: 100%
